sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value i
    for (parcours <- 0 to n-1-i){
                              ^AlgBubbleSort2:7: error: not found: value i
      if (getValeur(i)>getValeur(i+1)){
                    ^AlgBubbleSort2:7: error: not found: value i
      if (getValeur(i)>getValeur(i+1)){
                                 ^AlgBubbleSort2:8: error: not found: value i
        echange(i,i+1)
                ^AlgBubbleSort2:8: error: not found: value i
        echange(i,i+1)
                  ^